creat new edit forms and partials

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,12 @@
     
     <%= render 'layouts/navigation' %>
   
-<div class= "container">
-<%= yield %>
+  <div class= "container">
+  <%= render 'layouts/messages' %>
+  <%= yield %>
 
 
-  <%- render 'layouts/footer' %>
+  <%= render 'layouts/footer' %>
 
 </div>
 
