--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,9 +1,11 @@
-$navbar-default-bg:#00FF00;
-$light-orange: #ff8c00;
-$navbar-default-color: $light-orange;
+$navbar-default-bg:#B4FF9B;
+
+
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+
 
 
 #logo {
@@ -32,6 +34,7 @@ body {
     margin-left: 25px;
     float: left;
     margin-top: 20px;
+    
 }
 
 .center {
@@ -70,11 +73,31 @@ h2 {
 }
 
 
+.chef_info {
+    
+    margin-top: 10px;
+}
 
+.gravatar{
+    border-radius: 40px;
+}
 
+.well {
+    
+    background-color: #EDEDED;
+}
+input, textarea, select, .undeitable-input {
+    
+    border: 1px solid #d2d2d2;
+    border-radius: 5px;
+    width: 100%;
+    margin-bottom: 15px;
+}
 
-
-
+input {
+    height: auto !important;
+    
+}
 
 
 
