--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
         This is the home page to the ruby on rails course from udemy
     </h2>
     
-    <%= link_to "Sign up now!", "", class: "" " btn btn-lf btn-success" %>
+    <%= link_to "Sign up now!", "", class: "" " btn btn-lf btn-info active" %>
 </div>
 
 <div class= "row">
@@ -17,7 +17,7 @@
         <h2 class="left">
             Browse and view recipes as a guest and Sign up later
         </h2>
-        <p> <%= link_to "Browse recipe listings", "", class: "btn btn-warning btn-small" %></p>
+        <p> <%= link_to "Browse recipe listings", recipes_path, class: "btn btn-warning btn-small" %></p>
     </div>
         <div class="col-lg-4">
         
