--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -9,14 +9,18 @@
             </section>
         </div>
         
-        <div class="cold-lg-8 well">
+        <div class="cold-lg-6 well">
             <h4><%= link_to recipe.name, recipe_path(recipe)%></h4>
             <p><%= recipe.summary %></p>
             <p>
                 <span class='quiet'><small> <%=time_ago_in_words(recipe.created_at)%> ago</small></span>
-            </p>
-            
+           </p>
         </div>
-        <hr />
+        <div clas="cpl-md-4">
+            <%= image_tag(recipe.picture.url, size: "250x150", class: "gravatar") if recipe.picture? %>
+        </div>
+      
     </div>
+    
+      <hr />
 <% end %>
