--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -9,6 +9,9 @@
     <div class= "col-md-8">
         <%= link_to "Edit this Recipe", edit_recipe_path(@recipe), class: "btn btn-success pull-right" %>
         <h3><%= @recipe.summary %></h3>
+        <div class="show_recipe">
+            <%= image_tag(@recipe.picture.url, class: "gravatar") if @recipe.picture? %>
+        </div>
         <div class="well">
             <p>
                 <strong>
@@ -23,3 +26,5 @@
 <h5>
     <%= link_to "Return to Recipes listing", recipes_path, class: "btn btn-warning btn-small" %>
 </h5>
+
+
